--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "dynamic-sports: An Ionic project",
   "scripts": {
-      "test": "node_modules/karma/bin/karma start tests/karma.config.js",
-      "ios": "gulp sass && ionic emulate ios"
-    },
+    "test": "node_modules/karma/bin/karma start tests/karma.config.js",
+    "ios": "gulp sass && ionic emulate ios"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
@@ -14,14 +14,16 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.3.8",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
+    "jasmine-core": "^2.1.3",
     "karma": "~0.12.9",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-coverage": "~0.2.1",
     "karma-jasmine": "~0.1.5",
-    "karma-ng-scenario": "~0.1.0",
     "karma-junit-reporter": "~0.2.2",
-    "karma-coverage": "~0.2.1"
+    "karma-ng-scenario": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "shelljs": "^0.3.0"
   }
 }
